--- a/src/main/webapp/WEB-INF/cas.properties
+++ b/src/main/webapp/WEB-INF/cas.properties
@@ -19,7 +19,7 @@
 
 #server.name=http://localhost:8080
 #server.name=https://IEDUBV5NB000393.emea.avnet.com:8443
-server.name=https://${cas.server.host.name}:${cas.server.host.port}
+server.name=${cas.server.protocol}://${cas.server.host.name}${cas.server.host.port}
 server.prefix=${server.name}/cas
 # IP address or CIDR subnet allowed to access the /status URI of CAS that exposes health check information
 cas.securityContext.status.allowedSubnet=127.0.0.1
