Added GNI UAT and PROD profiles.

--- a/pom.xml
+++ b/pom.xml
@@ -418,6 +418,48 @@
 				<auth.logo>auth_logo_musgrave.png</auth.logo>
 			</properties>
 		</profile>
+		
+		<profile>
+         <id>asdac-uat</id>
+         <properties>
+            <cas.server.host.name>asdac-uat.bge.ie</cas.server.host.name>
+            <cas.server.host.port>:443</cas.server.host.port>
+
+            <!-- Active Directory -->
+            <ad.url> ldap://BGGWRDC05.bge.ie</ad.url>
+            <ad.domain>GNI</ad.domain>
+            <ad.searchBase>DC=bge,DC=ie</ad.searchBase>
+
+             <authentication.handler.bean>adAuthenticationHandler</authentication.handler.bean>
+             <authentication.config.context.resource>adConfigContext.xml</authentication.config.context.resource>
+
+            <customer>GNI</customer>
+            <customer.url>https://www.gasnetworks.ie</customer.url>
+            <auth.fav.icon>/site-files/cms-templates/img/shortcut-icons/favicon-196x196.png</auth.fav.icon>
+            <auth.logo>/site-files/cms-templates/img/logo.svg</auth.logo>
+         </properties>
+      </profile>
+		
+		<profile>
+         <id>asdac-prod</id>
+         <properties>
+            <cas.server.host.name>asdac.bge.ie</cas.server.host.name>
+            <cas.server.host.port>:443</cas.server.host.port>
+
+            <!-- Active Directory -->
+            <ad.url> ldap://BGGWRDC05.bge.ie</ad.url>
+            <ad.domain>GNI</ad.domain>
+            <ad.searchBase>DC=bge,DC=ie</ad.searchBase>
+
+             <authentication.handler.bean>adAuthenticationHandler</authentication.handler.bean>
+             <authentication.config.context.resource>adConfigContext.xml</authentication.config.context.resource>
+
+            <customer>GNI</customer>
+            <customer.url>https://www.gasnetworks.ie</customer.url>
+            <auth.fav.icon>/site-files/cms-templates/img/shortcut-icons/favicon-196x196.png</auth.fav.icon>
+            <auth.logo>/site-files/cms-templates/img/logo.svg</auth.logo>
+         </properties>
+      </profile>		
 
 	</profiles>
 
