--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,18 @@
 			<type>war</type>
 			<scope>runtime</scope>
 		</dependency>
+		
+		<!-- JAVA 11 Support -->
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 
 		<!-- OAuth Server Support -->
 		<dependency>
