Updated pom.xml to work with CAS on port 443

--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,7 @@
 			<id>dev</id>
 			<properties>
 				<cas.server.host.name>localhost</cas.server.host.name>
-				<cas.server.host.port>:443</cas.server.host.port>
+				<cas.server.host.port>443</cas.server.host.port>
 			</properties>
 		</profile>
 		
@@ -163,7 +163,7 @@
 			<id>dev-mysql</id>
 			<properties>
 				<cas.server.host.name>localhost</cas.server.host.name>
-				<cas.server.host.port>:443</cas.server.host.port>
+				<cas.server.host.port>443</cas.server.host.port>
 				<auth.db.url>jdbc:mysql://localhost:3306/RDMA</auth.db.url>
 				<auth.db.user>root</auth.db.user>
 				<auth.db.password>password</auth.db.password>
@@ -176,7 +176,7 @@
 			<id>dev-mssql</id>
 			<properties>
 				<cas.server.host.name>localhost</cas.server.host.name>
-				<cas.server.host.port>:443</cas.server.host.port>
+				<cas.server.host.port>443</cas.server.host.port>
 				<auth.db.url>jdbc:jtds:sqlserver://10.252.222.112:1433/RDMA</auth.db.url>
 				<auth.db.user>sa</auth.db.user>
 				<auth.db.password>sa</auth.db.password>
@@ -251,7 +251,7 @@
 			<properties>
 			
 				<cas.server.host.name>localhost</cas.server.host.name>
-				<cas.server.host.port>:443</cas.server.host.port>
+				<cas.server.host.port>443</cas.server.host.port>
 			
 				<auth.db.url>jdbc:postgresql://10.252.220.198:5432/ms-auth-2</auth.db.url>
 				<auth.db.user>postgres</auth.db.user>
@@ -293,7 +293,7 @@
 			<id>dev-vodafone</id>
 			<properties>
 				<cas.server.host.name>localhost</cas.server.host.name>
-				<cas.server.host.port>:443</cas.server.host.port>
+				<cas.server.host.port>443</cas.server.host.port>
 
 				<authentication.handler.bean>adAuthenticationHandler</authentication.handler.bean>
 				<authentication.config.context.resource>adConfigContext.xml</authentication.config.context.resource>
@@ -312,7 +312,7 @@
 			<id>test-vodafone</id>
 			<properties>
 				<cas.server.host.name>10.252.220.65</cas.server.host.name>
-				<cas.server.host.port>:443</cas.server.host.port>
+				<cas.server.host.port>443</cas.server.host.port>
 
 				<customer>Vodafone Ireland</customer>
 				<customer.url>http://www.vodafone.ie</customer.url>
@@ -328,7 +328,7 @@
 			<id>test</id>
 			<properties>
 				<cas.server.host.name>10.252.220.65</cas.server.host.name>
-				<cas.server.host.port>:443</cas.server.host.port>
+				<cas.server.host.port>443</cas.server.host.port>
 
 				<customer>Client Solutions</customer>
 				<customer.url>http://www.as.techdata.eu/clientsolutions/</customer.url>
@@ -339,7 +339,7 @@
 			<id>uat-tmi</id>
 			<properties>
 				<cas.server.host.name>172.16.8.11</cas.server.host.name>
-				<cas.server.host.port>:443</cas.server.host.port>
+				<cas.server.host.port>443</cas.server.host.port>
 
 				<customer>Tesco Mobile Ireland</customer>
 				<customer.url>http://www.tescomobile.com</customer.url>
@@ -356,7 +356,7 @@
 			<id>prod-tmi</id>
 			<properties>
 				<cas.server.host.name>172.16.1.20</cas.server.host.name>
-				<cas.server.host.port>:443</cas.server.host.port>
+				<cas.server.host.port>443</cas.server.host.port>
 
 				<customer>Tesco Mobile Ireland</customer>
 				<customer.url>http://www.tescomobile.com</customer.url>
@@ -373,7 +373,7 @@
 			<id>musgrave-psq-old</id>
 			<properties>
 				<cas.server.host.name>10.216.2.20</cas.server.host.name>
-				<cas.server.host.port>:443</cas.server.host.port>
+				<cas.server.host.port>443</cas.server.host.port>
 				<auth.db.url>jdbc:sqlserver://MRPIAVDBDEV01:1433;database=RDMA;integratedSecurity=true;</auth.db.url>
 				<auth.db.sql.query>select user_password from dbo.users_gdma2 where username=?</auth.db.sql.query>
 				<auth.db.encoding.algo>SHA-1</auth.db.encoding.algo>
@@ -393,7 +393,7 @@
 			<id>musgrave-psq</id>
 			<properties>
 				<cas.server.host.name>applications-psq.musgrave.ie</cas.server.host.name>
-				<cas.server.host.port>:443</cas.server.host.port>
+				<cas.server.host.port>443</cas.server.host.port>
 				
 				<!-- Active Directory -->
 				<ad.url>ldap://tradc004.musgravegroup.net</ad.url>
@@ -414,7 +414,7 @@
 			<id>musgrave-prod</id>
 			<properties>
 				<cas.server.host.name>applications.musgrave.ie</cas.server.host.name>
-				<cas.server.host.port>:443</cas.server.host.port>
+				<cas.server.host.port>443</cas.server.host.port>
 
 				<!-- Active Directory -->
 				<ad.url>ldap://tradc004.musgravegroup.net</ad.url>
@@ -435,7 +435,7 @@
          <id>asdac-uat</id>
          <properties>
             <cas.server.host.name>asdac-uat.bge.ie</cas.server.host.name>
-            <cas.server.host.port>:443</cas.server.host.port>
+            <cas.server.host.port>443</cas.server.host.port>
 
             <!-- Active Directory -->
             <ad.url>ldap://BGGWRDC05.bge.ie</ad.url>
@@ -456,7 +456,7 @@
          <id>asdac-prod</id>
          <properties>
             <cas.server.host.name>asdac.bge.ie</cas.server.host.name>
-            <cas.server.host.port>:443</cas.server.host.port>
+            <cas.server.host.port>443</cas.server.host.port>
 
             <!-- Active Directory -->
             <ad.url> ldap://BGGWRDC05.bge.ie</ad.url>
