Updated pom.xml file, adding Kingspan and ASDAC Pre-prod profiles.

--- a/pom.xml
+++ b/pom.xml
@@ -453,25 +453,66 @@
       </profile>
 		
 		<profile>
-         <id>asdac-prod</id>
+         <id>asdac-pre-prod</id>
          <properties>
-            <cas.server.host.name>asdac.bge.ie</cas.server.host.name>
+            <cas.server.host.name>asdac-preprod.bge.ie</cas.server.host.name>
             <cas.server.host.port>443</cas.server.host.port>
 
             <!-- Active Directory -->
-            <ad.url> ldap://BGGWRDC05.bge.ie</ad.url>
-            <ad.domain>GNI</ad.domain>
-            <ad.searchBase>DC=bge,DC=ie</ad.searchBase>
+            <ad.url>ldap://BGGWRDC05.bge.ie</ad.url>
+            <ad.domain>bge.ie</ad.domain>
+			<ad.searchBase>DC=bge,DC=ie</ad.searchBase>
 
              <authentication.handler.bean>adAuthenticationHandler</authentication.handler.bean>
-             <authentication.config.context.resource>adConfigContext.xml</authentication.config.context.resource>
+             <authentication.config.context.resource>alt_adConfigContext.xml</authentication.config.context.resource>
 
             <customer>GNI</customer>
             <customer.url>https://www.gasnetworks.ie</customer.url>
             <auth.fav.icon>/site-files/cms-templates/img/shortcut-icons/favicon-196x196.png</auth.fav.icon>
             <auth.logo>/site-files/cms-templates/img/logo.svg</auth.logo>
          </properties>
-      </profile>		
+      </profile>
+		
+		<profile>
+         <id>asdac-prod</id>
+         <properties>
+            <cas.server.host.name>asdac.bge.ie</cas.server.host.name>
+            <cas.server.host.port>443</cas.server.host.port>
+
+            <!-- Active Directory -->
+            <ad.url>ldap://BGGWRDC05.bge.ie</ad.url>
+            <ad.domain>bge.ie</ad.domain>
+			<ad.searchBase>DC=bge,DC=ie</ad.searchBase>
+
+             <authentication.handler.bean>adAuthenticationHandler</authentication.handler.bean>
+             <authentication.config.context.resource>alt_adConfigContext.xml</authentication.config.context.resource>
+
+            <customer>GNI</customer>
+            <customer.url>https://www.gasnetworks.ie</customer.url>
+            <auth.fav.icon>/site-files/cms-templates/img/shortcut-icons/favicon-196x196.png</auth.fav.icon>
+            <auth.logo>/site-files/cms-templates/img/logo.svg</auth.logo>
+         </properties>
+      </profile>
+		
+		<profile>
+         <id>kingspan</id>
+         <properties>
+            <cas.server.host.name>KILDCAPP023</cas.server.host.name>
+				<cas.server.protocol>http</cas.server.protocol>
+				<cas.server.host.port>80</cas.server.host.port>
+
+            <!-- Active Directory -->
+            <ad.url>ldap://KILDCINF01P.kil.kingspan.net</ad.url>
+            <ad.domain>KIL</ad.domain>
+				<ad.searchBase>DC=Kil,DC=kingspan,DC=net</ad.searchBase>
+				
+				<authentication.handler.bean>adAuthenticationHandler</authentication.handler.bean>
+				<authentication.config.context.resource>adConfigContext.xml</authentication.config.context.resource>
+
+            <customer>Kingspan</customer>
+            <customer.url>https://www.kingspan.com</customer.url>
+         </properties>
+      </profile>	
 
 	</profiles>
 
